fix(street): fix hide poorest label on mobile

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -373,8 +373,8 @@ body.about #app-container.container {
     /*font-size: 10px;*/
   }
 
-  svg .poorest {
-    opacity: 0;
-  }
+  /*svg .poorest {*/
+    /*opacity: 0;*/
+  /*}*/
 }
 
